--- a/src/components/country-list/country-list.component.scss
+++ b/src/components/country-list/country-list.component.scss
@@ -1,44 +1,53 @@
 .country-list {
-	position: relative;
-	min-height: 85%;
+    position: relative;
+
+    .country-list-keyboard {
+        width: 36px;
+        height: 22px;
+        background-size: cover;
+    }
 }
 .country-list-wrapper {
-	padding: 0 5px;
-	padding-left: 0;
-	padding-bottom: 30px;
-	color: white;
-	overflow: hidden;
-	li {
-		padding-left: 5px;
-	}
+    padding: 0 0 35px 0;
+    color: #fff;
+    overflow: hidden;
+    z-index: 1000;
+    position: relative;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    li {
+        padding-left: 5px;
+    }
 }
 .country-list-switch-wrapper {
-	position: absolute;
-	display: flex;
-	color: white;
-	left: 0px;
-	bottom: 5px;
-	width: 100%;
-	justify-content: space-between;
-	align-items: center;
-
+    position: absolute;
+    display: flex;
+    color: white;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.country-list-switch-wrapper.arrow-buttons {
-	width: calc(100%-5px);
-}
 .country-list-swich-title {
-	display: inline-block;
+    display: inline-block;
 }
 .country-list-btn-changes {
-	background-color: transparent;
-	color: white;
-	border: none;
-	font-size: 20px;
-	// box-shadow: inset 0 0 0 1px white;
+    background-color: transparent;
+    color: white;
+    border: none;
+    font-size: 20px;
+    // box-shadow: inset 0 0 0 1px white;
 }
 
 .country-list-title {
-	background-color: $blue;
-	margin-bottom: 5px;
+    background-color: $blue;
+    margin-bottom: 5px;
+}
+
+.country-list-country-name {
+    margin-right: 5px;
+    font-size: 16px;
 }
