--- a/src/components/graph-component/graph.scss
+++ b/src/components/graph-component/graph.scss
@@ -1,6 +1,6 @@
 .graph {
     width: 100%;
-    height: 25%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -24,6 +24,7 @@
         outline: none;
         visibility: hidden;
         transition: 0.5s linear;
+
         img {
             width: 80%;
         }
@@ -36,11 +37,11 @@
     &:hover .base-markup-btn-increase {
         visibility: visible;
     }
+
     .draw-graph-switch {
         font-size: 44px;
         background: $blue;
         border: none;
-        color: rgba(157, 163, 163, 0.637);
         width: 10%;
         cursor: pointer;
         outline: none;
@@ -59,16 +60,20 @@
     .draw-graph-right {
         order: 4;
     }
-    .draw-graph-right, .draw-graph-left {
+
+    .draw-graph-right,
+    .draw-graph-left {
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
     .graph-wrapper-canvas {
         width: 35%;
         display: flex;
         justify-content: center;
         order: 2;
+
         canvas {
             display: block;
             width: 100%;
@@ -76,76 +81,90 @@
     }
 
     .draw-graph-select-coutry {
-        color: #929180;
+        color: $white;
         margin-right: 10px;
         margin-top: 10px;
         height: 20px;
         width: 20%;
         order: 3;
         outline: none;
-        background: #25252541;
-        border: 1px #0a0a0a solid;
+        background: $darkblue;
+        border: 1px $white solid;
         cursor: pointer;
+
         &::-webkit-scrollbar {
-            width: 0.56rem;
+            width: 0.2rem;
         }
+
         &::-webkit-scrollbar-track {
-            background-color: #999;
+            background-color: $white;
         }
+
         &::-webkit-scrollbar-thumb {
             height: 1.11rem;
-            background-color: #666;
+            background-color: $white;
         }
     }
 
     .draw-graph-left-select-btn {
         order: 1;
         width: 20%;
+
         .draw-graph-select {
-            color: #929180;
+            color: $white;
             margin-left: 10px;
             margin-top: 10px;
             width: 100%;
             height: 20px;
             outline: none;
-            background: #25252541;
-            border: 1px #0a0a0a solid;
+            background: $darkblue;
+            border: 1px $white solid;
 
             cursor: pointer;
         }
+
         .draw-graph-go-global-cases {
             width: 100%;
             height: 20px;
-            background: #666;
-            border: 1px solid #0a0a0a;
+            background: $white;
+            border: 1px solid $blue;
             margin-top: 10px;
             margin-left: 10px;
             outline: none;
             cursor: pointer;
 
             &:hover {
-                background-color: aliceblue;
+                background-color: $lightblue;
             }
         }
     }
 
     option {
-        background: #000000e8;
+        background: $blue;
         border: 1px #0a0a0a solid;
     }
 }
 
 .full-screen-window {
-    position: absolute;
-    top: 5%;
-    left: 5%;
+    position: fixed;
+    top: 0;
+    left: 0;
     margin: 0 auto;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     background: $blue;
     z-index: 1200;
+
     canvas {
         position: relative;
         top: 30%;
     }
+}
+
+.canvas-board {
+    position: absolute;
+    width: 215px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
