--- a/src/components/map/legend/legendMap.scss
+++ b/src/components/map/legend/legendMap.scss
@@ -25,7 +25,7 @@
     width: 320px;
     right: -100%;
     top: 0;
-    padding-top: 60px;
+    padding-top: 30px;
     z-index: 1000;
 
     background-color: $blue;
@@ -33,7 +33,7 @@
     transition: right 0.5s ease;
 
     .legendListTitle {
-      margin-left: 30px;
+        margin-left: 30px;
     }
 
     ul {
@@ -69,7 +69,6 @@
 
 .leaflet-bar a.leaflet-control-zoom-out {
     border-bottom: 1px solid $white;
-
 }
 
 .leaflet-bar a.leaflet-disabled {
@@ -106,74 +105,73 @@
             background-color: $lightblue;
         }
     }
-    
+
     .dot {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 5px;
-      height: 5px;
-      background-color: $white;
-      border-radius: 10px;
-      @include transform(translate(-50%, -50%));
-      @include transition(margin .4s ease .4s, width .4s ease);
-      
-      &:nth-of-type(1) {
-        margin-top: -12px;
-        margin-left: -12px;
-        @include transform(translate(-50%, -50%) rotate(45deg));
-      }
-      
-      &:nth-of-type(2) {
-        margin-top: -12px;
-        @include transform(translate(-50%, -50%) rotate(-45deg));
-      }
-      
-      &:nth-of-type(3) {
-        margin-top: -12px;
-        margin-left: 12px;
-      }
-      
-      &:nth-of-type(4) {
-        margin-left: -12px;
-      }
-      
-      &:nth-of-type(5) {  
-        
-      }
-      
-      &:nth-of-type(6) {
-        margin-left: 12px;
-      }
-      
-      &:nth-of-type(7) {
-        margin-top: 12px;
-        margin-left: -12px;
-      }
-      
-      &:nth-of-type(8) {
-        margin-top: 12px;
-      }
-      
-      &:nth-of-type(9) {
-        margin-top: 12px;
-        margin-left: 12px;
-      }
-    }
-    
-    &.clicked {
-      .dot {
-        @include transition(margin .4s ease, width .4s ease .4s);
-        margin-left: 0;
-        margin-top: 0;
-        
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 5px;
+        height: 5px;
+        background-color: $white;
+        border-radius: 10px;
+        @include transform(translate(-50%, -50%));
+        @include transition(margin 0.4s ease 0.4s, width 0.4s ease);
+
         &:nth-of-type(1) {
-          width: 35px;
+            margin-top: -12px;
+            margin-left: -12px;
+            @include transform(translate(-50%, -50%) rotate(45deg));
         }
-        
+
         &:nth-of-type(2) {
-          width: 35px;
+            margin-top: -12px;
+            @include transform(translate(-50%, -50%) rotate(-45deg));
         }
-      }
+
+        &:nth-of-type(3) {
+            margin-top: -12px;
+            margin-left: 12px;
+        }
+
+        &:nth-of-type(4) {
+            margin-left: -12px;
+        }
+
+        &:nth-of-type(5) {
+        }
+
+        &:nth-of-type(6) {
+            margin-left: 12px;
+        }
+
+        &:nth-of-type(7) {
+            margin-top: 12px;
+            margin-left: -12px;
+        }
+
+        &:nth-of-type(8) {
+            margin-top: 12px;
+        }
+
+        &:nth-of-type(9) {
+            margin-top: 12px;
+            margin-left: 12px;
+        }
     }
-  }
+
+    &.clicked {
+        .dot {
+            @include transition(margin 0.4s ease, width 0.4s ease 0.4s);
+            margin-left: 0;
+            margin-top: 0;
+
+            &:nth-of-type(1) {
+                width: 35px;
+            }
+
+            &:nth-of-type(2) {
+                width: 35px;
+            }
+        }
+    }
+}
