--- a/src/components/country-list/chart/chart.scss
+++ b/src/components/country-list/chart/chart.scss
@@ -75,5 +75,5 @@ ul li {
     background-color: white;
     border-radius: 5px;
     margin: 0 5px;
-    background-image: url("../img/keyboard.png");
+    background-image: url("../../assets/img/keyboard.png");
 }
