--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -117,30 +117,23 @@ footer {
     height: 20px;
     right: -2px;
     top: -20px;
-    background: #0bf03d;
+    background: #317174;
     border: 1px solid #0a0a0a;
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    &::before {
-        content: url(../../assets/img/full-screen.svg);
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
     cursor: pointer;
     outline: none;
     opacity: 0;
     visibility: hidden;
     transition: 0.5s linear;
-    img {
-        width: 80%;
-    }
+    background-image: url(../img/full-screen.svg);
+    &:hover {
+            background: $lightblue;
+            background-image: url(../../assets/img/full-screen.svg);
+        }
 }
-
-
 
 .wrapper {
     box-sizing: border-box;
@@ -153,6 +146,7 @@ footer {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    position: relative;
 
     .country-list {
         grid-area: country;
@@ -175,8 +169,6 @@ footer {
         grid-template-rows: 70% 30%;
 
         .world-map {
-            position: relative;
-            width: 100%;
             .base-markup-btn-increase {
                 top: 0;
                 left: 50%;
@@ -190,22 +182,57 @@ footer {
     }
 
     .table {
+        .base-markup-btn-increase {
+            top: 0;
+            left: 0;
+        }
+
+        &:hover .base-markup-btn-increase {
+            opacity: 1;
+            visibility: visible;
+        }
         grid-area: table;
     }
 }
 
 .full-screen-window {
     position: absolute;
-    top: 5%;
-    left: 5%;
+    top: 0;
+    left: 0;
     margin: 0 auto;
-    width: 90vw;
-    height: 90vw;
+    width: 93vw;
+    height: 60vw;
     background: #2c0f0f;
     z-index: 1200;
     canvas {
         position: relative;
         top: 30%;
+    }
+}
+
+.world-map.full-screen-window {
+    position: absolute;
+    width: 75vw;
+    left: 10%;
+}
+
+.country-list.full-screen-window {
+    left: -405%;
+}
+
+.graph.full-screen-window {
+    z-index: 1400;
+    top: 0;
+    height: 724px;
+    width: 95vw;
+
+    .graph-wrapper-canvas {
+        height: 400px;
+        width: 400px;
+    }
+
+    .base-markup-btn-increase {
+        top: 0;
     }
 }
 // ---------------------left-and-right-btn-----------
