--- a/src/components/country-list/country-list.component.scss
+++ b/src/components/country-list/country-list.component.scss
@@ -2,7 +2,7 @@
 @import "./chart/chart.scss";
 
 .country-list {
-    position: relative;
+    // position: relative;
 
     .country-list-keyboard {
         width: 36px;
@@ -42,7 +42,6 @@
     color: white;
     border: none;
     font-size: 20px;
-    // box-shadow: inset 0 0 0 1px white;
 }
 
 .country-list-title {
