--- a/src/components/keyboard/keyboard.component.scss
+++ b/src/components/keyboard/keyboard.component.scss
@@ -1,79 +1,78 @@
 @import "../../assets/css/mixin.scss";
 .keyboard {
-	display: none;
-	position: absolute;
-	z-index: 4;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	padding: 5px 0;
-	background: transparent; 
-	user-select: none;
-	transition: all 1s ease-out;
-	background-color: $blue;
-	height: 100%;
+    display: block;
+    position: absolute;
+    z-index: 4;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 5px 0;
+    background: transparent;
+    user-select: none;
+    transition: all 1s ease-out;
+    background-color: $blue;
+    height: 100%;
 }
 
 .keyboard--hidden {
-	bottom: -200%;
+    bottom: -200%;
 }
 
 .keyboard__keys {
-	text-align: center;
+    text-align: center;
 }
 
 .keyboard__key {
-	height: 40px;
-	width: 8%;
-	max-width: 60px;
-	margin: 2px;
-	border-radius: 4px;
-	border: none;
-	background: rgba(255, 255, 255, 0.2);
-	color: $white;
-	font-size: 1rem;
-	outline: none;
-	cursor: pointer;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	vertical-align: top;
-	padding: 0;
-	-webkit-tap-highlight-color: transparent;
-	transition: color 0.5s ease;
+    height: 30px;
+    width: 8%;
+    max-width: 60px;
+    margin: 2px;
+    border-radius: 4px;
+    border: none;
+    background: rgba(255, 255, 255, 0.2);
+    color: $white;
+    font-size: 1rem;
+    outline: none;
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: top;
+    padding: 0;
+    -webkit-tap-highlight-color: transparent;
+    transition: color 0.5s ease;
 
-	&:hover {
-		color: $lightblue;
-	}
+    &:hover {
+        color: $lightblue;
+    }
 }
 
 .country-list-keyboard {
-	&:hover {
-		box-shadow: 0px 0px 3px 2px $lightblue;
-	}
-	cursor: pointer;
-	transition: 0.5s ease;
+    &:hover {
+        box-shadow: 0px 0px 3px 2px $lightblue;
+    }
+    cursor: pointer;
+    transition: 0.5s ease;
 }
 
 .keyboard__key:active {
-	background: rgba(255, 255, 255, 0.034);
+    background: rgba(255, 255, 255, 0.034);
 }
 .active {
-	background: rgba(255, 255, 255, 0.12);
+    background: rgba(255, 255, 255, 0.12);
 }
 
 .keyboard__key--wide {
-	width: 16%;
+    width: 16%;
 }
 
 .keyboard__key--extra-wide {
-	width: 48%;
-	max-width: 500px;
+    width: 48%;
+    max-width: 500px;
 }
 
 @media screen and (max-width: 500px) {
-	.keyboard {
-		right: 0;
-	}
-	
+    .keyboard {
+        right: 0;
+    }
 }
