--- a/src/components/graph-component/graph.scss
+++ b/src/components/graph-component/graph.scss
@@ -2,7 +2,8 @@
 .graph {
     width: 100%;
     height: 100%;
-    display: flex;
+		display: flex;
+		position: relative;
     justify-content: space-between;
     background-color: $blue;
     overflow: hidden;
@@ -12,8 +13,8 @@
         z-index: 1200;
         width: 20px;
         height: 20px;
-        left: 50%;
-        top: 70%;
+        left: 97%;
+        top: 1%;
         background:#317174;
         border: 1px solid #0a0a0a;
         padding: 0;
