fix: fix seach and swichers

--- a/src/components/country-list/chart/chart.scss
+++ b/src/components/country-list/chart/chart.scss
@@ -17,6 +17,7 @@ ul li {
 }
 
 .country-list-countries-wrapper {
+	height: 100%;
     overflow-y: scroll;
     padding-left: 0px;
     margin: 5px 0;
